{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 39,
  "lineage": "88f5a480-d970-8bea-7c38-68510b27971f",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "infra-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06e3c045d79fd65d9",
            "arn": "arn:aws:ec2:us-east-2:511515044625:instance/i-06d6dc68cc743214d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d6dc68cc743214d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d68939e5dded78f4"
              }
            ],
            "primary_network_interface_id": "eni-0d68939e5dded78f4",
            "private_dns": "ip-10-0-101-177.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.177",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0828315ed85a3c272",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098feb73639150dcd",
            "tags": {
              "environment": "dev",
              "name": "dev-infra-instance"
            },
            "tags_all": {
              "environment": "dev",
              "name": "dev-infra-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-080a62168b0aca6e6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "i-06d6dc68cc743214d",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.ec2.aws_key_pair.infra-key",
            "module.ec2.aws_security_group.infra-security-group",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "infra-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:security-group/sg-080a62168b0aca6e6",
            "description": "This is the security group for dev environment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "opening for all port and all porotcol",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080a62168b0aca6e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "203.0.113.5/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-security-group",
            "name_prefix": "",
            "owner_id": "511515044625",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "name": "dev-security-group"
            },
            "tags_all": {
              "environment": "dev",
              "name": "dev-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "sg-080a62168b0aca6e6",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:network-acl/acl-04d55466c0e58bbc5",
            "default_network_acl_id": "acl-04d55466c0e58bbc5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-04d55466c0e58bbc5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "511515044625",
            "region": "us-east-2",
            "subnet_ids": [
              "subnet-01ee3c0dbf0e11c2c",
              "subnet-037593858156dd4e2",
              "subnet-04211e8b73b62f153",
              "subnet-0443b84d80f6ec011",
              "subnet-07f3e075fceb026c7",
              "subnet-098feb73639150dcd",
              "subnet-0b55bc3048b0b0ec0",
              "subnet-0c5936f1188031279"
            ],
            "tags": {
              "Name": "dev-vpc-default",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-default",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:route-table/rtb-0e22ca9e8654f81b7",
            "default_route_table_id": "rtb-0e22ca9e8654f81b7",
            "id": "rtb-0e22ca9e8654f81b7",
            "owner_id": "511515044625",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "dev-vpc-default",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-default",
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:security-group/sg-076a4c9dd58480b6a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-076a4c9dd58480b6a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "511515044625",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-vpc-default",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-default",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:internet-gateway/igw-0355b9c94b393db1c",
            "id": "igw-0355b9c94b393db1c",
            "owner_id": "511515044625",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0355b9c94b393db1c",
            "id": "r-rtb-07b7c6e11944999f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-07b7c6e11944999f9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-2",
            "route_table_id": "rtb-07b7c6e11944999f9"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:route-table/rtb-0cd3a9a31b73eb39e",
            "id": "rtb-0cd3a9a31b73eb39e",
            "owner_id": "511515044625",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "dev-vpc-intra",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-intra",
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "rtb-0cd3a9a31b73eb39e",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:route-table/rtb-0209c8e6cfc8d010c",
            "id": "rtb-0209c8e6cfc8d010c",
            "owner_id": "511515044625",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "dev-vpc-private-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-private-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "rtb-0209c8e6cfc8d010c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:route-table/rtb-02dbb1a34c7d5d95b",
            "id": "rtb-02dbb1a34c7d5d95b",
            "owner_id": "511515044625",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "dev-vpc-private-us-east-2b",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-private-us-east-2b",
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "rtb-02dbb1a34c7d5d95b",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:route-table/rtb-0717b976bccb28e4d",
            "id": "rtb-0717b976bccb28e4d",
            "owner_id": "511515044625",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [],
            "tags": {
              "Name": "dev-vpc-private-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-private-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "rtb-0717b976bccb28e4d",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:route-table/rtb-07b7c6e11944999f9",
            "id": "rtb-07b7c6e11944999f9",
            "owner_id": "511515044625",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0355b9c94b393db1c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-vpc-public",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-public",
              "environment": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "rtb-07b7c6e11944999f9",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099a22c020067f024",
            "region": "us-east-2",
            "route_table_id": "rtb-0cd3a9a31b73eb39e",
            "subnet_id": "subnet-0c5936f1188031279"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081cbc76d92128bc4",
            "region": "us-east-2",
            "route_table_id": "rtb-0cd3a9a31b73eb39e",
            "subnet_id": "subnet-07f3e075fceb026c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08473e06e25436ecf",
            "region": "us-east-2",
            "route_table_id": "rtb-0209c8e6cfc8d010c",
            "subnet_id": "subnet-037593858156dd4e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8bb25f8aa5c87fc",
            "region": "us-east-2",
            "route_table_id": "rtb-02dbb1a34c7d5d95b",
            "subnet_id": "subnet-0b55bc3048b0b0ec0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8a85aca07c43d3e",
            "region": "us-east-2",
            "route_table_id": "rtb-0717b976bccb28e4d",
            "subnet_id": "subnet-0443b84d80f6ec011"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af353010bfa729ef",
            "region": "us-east-2",
            "route_table_id": "rtb-07b7c6e11944999f9",
            "subnet_id": "subnet-098feb73639150dcd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0201cae5d0630e2c9",
            "region": "us-east-2",
            "route_table_id": "rtb-07b7c6e11944999f9",
            "subnet_id": "subnet-01ee3c0dbf0e11c2c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd61c223bc0ce194",
            "region": "us-east-2",
            "route_table_id": "rtb-07b7c6e11944999f9",
            "subnet_id": "subnet-04211e8b73b62f153"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:subnet/subnet-0c5936f1188031279",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5936f1188031279",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511515044625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc-intra-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-intra-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "subnet-0c5936f1188031279",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:subnet/subnet-07f3e075fceb026c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f3e075fceb026c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511515044625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc-intra-us-east-2b",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-intra-us-east-2b",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "subnet-07f3e075fceb026c7",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:subnet/subnet-037593858156dd4e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037593858156dd4e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511515044625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc-private-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-private-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "subnet-037593858156dd4e2",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:subnet/subnet-0b55bc3048b0b0ec0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b55bc3048b0b0ec0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511515044625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc-private-us-east-2b",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-private-us-east-2b",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "subnet-0b55bc3048b0b0ec0",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:subnet/subnet-0443b84d80f6ec011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0443b84d80f6ec011",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511515044625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc-private-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-private-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "subnet-0443b84d80f6ec011",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:subnet/subnet-098feb73639150dcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098feb73639150dcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511515044625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc-public-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-public-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "subnet-098feb73639150dcd",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:subnet/subnet-01ee3c0dbf0e11c2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ee3c0dbf0e11c2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511515044625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc-public-us-east-2b",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-public-us-east-2b",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "subnet-01ee3c0dbf0e11c2c",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:subnet/subnet-04211e8b73b62f153",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04211e8b73b62f153",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511515044625",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc-public-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc-public-us-east-2a",
              "environment": "dev",
              "terraform": "true"
            },
            "vpc_id": "vpc-0784fcf3064246b25"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "subnet-04211e8b73b62f153",
            "region": "us-east-2"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:511515044625:vpc/vpc-0784fcf3064246b25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04d55466c0e58bbc5",
            "default_route_table_id": "rtb-0e22ca9e8654f81b7",
            "default_security_group_id": "sg-076a4c9dd58480b6a",
            "dhcp_options_id": "dopt-06b5296eaa1814db0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0784fcf3064246b25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e22ca9e8654f81b7",
            "owner_id": "511515044625",
            "region": "us-east-2",
            "tags": {
              "Name": "dev-vpc",
              "environment": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "dev-vpc",
              "environment": "dev",
              "terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511515044625",
            "id": "vpc-0784fcf3064246b25",
            "region": "us-east-2"
          }
        }
      ]
    }
  ]
}